Fixed coordinator flow, and fixed the UI overflow in Admin panel. Also added new coordinator workflow, ui, and restrictions